# cookiecutter_ml

./: README.md  env.yml
{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.repo_name}}/data/01_raw/: README.md
{{cookiecutter.repo_name}}/data/02_interim/: README.md
{{cookiecutter.repo_name}}/data/03_processed/: README.md
{{cookiecutter.repo_name}}/models/: README.md
{{cookiecutter.repo_name}}/notebooks/: README.md
{{cookiecutter.repo_name}}/reports/: README.md
