[tool.poetry]
name = "integraph-1"
version = "0.1.0"
description = "A project for exploring GNNs"
authors = ["Pavel Strashnov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
wemake-python-styleguide = "^0.16.1"
flake8-docstrings = "^1.6.0"
jupyterlab = "^3.3.4"
isort = "^5.10.1"
pytest = "^7.1.2"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
